Add build URL to notification message.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ notifications:
     rooms:
       secure: aXpt7vF8j08UA48UltX9BOd5PjaSp8EG6lcKtjM6oi2K0EF+NlJq3RZRKgrYbNTISbOjJUJlFdbGG8oUBi0ilZV0kvF2JYlB16HZgUEcsSeTInUEmPZoy+VvgTve/L+b4+2cgC0pyxC6kzCk9PAYQ3ZCsqSbwISZmHV4cG1k9tg=
     template:
-      - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+      - 'Build #%{build_number} (%{branch} - %{commit} : %{author}): %{message} %{build_url}'
