--- a/test/fixtures/versions.yml
+++ b/test/fixtures/versions.yml
@@ -11,8 +11,8 @@
 #  state          :integer          default(0)
 #  created_at     :datetime
 #  updated_at     :datetime
+#  comment        :string(255)
 #
-
 
 one:
   item: sword_art_online (Anime)
