--- a/test/fixtures/versions.yml
+++ b/test/fixtures/versions.yml
@@ -24,7 +24,7 @@ one:
 two:
   item: sword_art_online (Anime)
   user: josh
-  object: {}
+  object: { "synopsis": "Hello, World!" }
   object_changes: {}
   state: 0
 
