convert modals to ember-cli.

--- a/app/frontend/bower.json
+++ b/app/frontend/bower.json
@@ -18,6 +18,7 @@
     "jquery-autosize": "~1.18.17",
     "pace": "~1.0.2",
     "Chart.js": "~0.2.0",
-    "typeahead.js": "~0.10.5"
+    "typeahead.js": "~0.10.5",
+    "Jcrop": "~0.9.12"
   }
 }
