Add pro_expires_at to user model.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -58,6 +58,7 @@
 #  last_backup                 :datetime
 #  approved_edit_count         :integer          default(0)
 #  rejected_edit_count         :integer          default(0)
+#  pro_expires_at              :datetime
 #
 
 vikhyat:
