implement partner code redeeming

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -155,3 +155,4 @@ josh:
   mal_import_in_progress:
   approved_edit_count: 0
   rejected_edit_count: 0
+  pro_expires_at: 2020-01-01 19:37:18.851425000 Z
