--- a/test/fixtures/partner_deals.yml
+++ b/test/fixtures/partner_deals.yml
@@ -8,4 +8,15 @@ one:
   partner_logo_file_size: 100369
   partner_logo_updated_at: 2013-07-31 02:37:51.625479000 Z
   deal_url: https://amazon.com
-  valid_countries: ["US"]
+  valid_countries: ["US", "AU"]
+
+two:
+  partner_name: Chrucyroll
+  deal_title: One Month Crunchyroll
+  deal_description: Getting all the rolls
+  redemption_info: lmgtfy
+  partner_logo_file_name: 6589.jpeg
+  partner_logo_content_type: image/jpeg
+  partner_logo_file_size: 100369
+  partner_logo_updated_at: 2013-07-31 02:37:51.625479000 Z
+  deal_url: https://crunchyroll.com
