--- a/test/fixtures/partner_deals.yml
+++ b/test/fixtures/partner_deals.yml
@@ -13,8 +13,8 @@
 #  deal_url                  :text             not null
 #  deal_description          :text             not null
 #  redemption_info           :text             not null
-#  recurring                 :boolean          default(FALSE), not null
 #  active                    :boolean          default(TRUE), not null
+#  recurring                 :integer          default(0)
 #
 
 one:
