--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -20,10 +20,10 @@
   "devDependencies": {
     "broccoli-asset-rev": "^1.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.3",
+    "ember-cli": "0.1.7",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.6",
-    "ember-cli-esnext": "0.1.1",
+    "ember-cli-6to5": "0.2.1",
     "ember-cli-ic-ajax": "^0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.2",
