Genericize billing columns and remove token column

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -59,10 +59,10 @@
 #  approved_edit_count         :integer          default(0)
 #  rejected_edit_count         :integer          default(0)
 #  pro_expires_at              :datetime
-#  stripe_token                :string(255)
 #  pro_membership_plan_id      :integer
-#  stripe_customer_id          :string(255)
+#  billing_id                  :string(255)
 #  about_formatted             :text
+#  billing_method              :integer
 #
 
 vikhyat:
