--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -22,6 +22,7 @@
     "Jcrop": "~0.9.12",
     "jquery-textcomplete": "vevix/jquery-textcomplete#master",
     "masonry": "~3.2.2",
-    "outlayer": "~1.3.0"
+    "outlayer": "~1.3.0",
+    "imagesloaded": "~3.1.8"
   }
 }
