--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,20 +18,19 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.15",
-    "ember-cli-6to5": "^3.0.0",
-    "ember-cli-app-version": "0.3.1",
-    "ember-cli-content-security-policy": "0.3.0",
-    "ember-cli-dependency-checker": "0.0.7",
+    "broccoli-asset-rev": "^2.0.2",
+    "ember-cli": "0.2.3",
+    "ember-cli-app-version": "0.3.3",
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "0.0.8",
+    "ember-cli-htmlbars": "^0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.7",
+    "ember-cli-qunit": "0.3.10",
     "ember-cli-rails-addon": "0.0.11",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "^1.0.0-beta.14.1",
-    "ember-export-application-global": "^1.0.2",
-    "express": "^4.8.5"
+    "ember-data": "^1.0.0-beta.16.1",
+    "ember-export-application-global": "^1.0.2"
   }
 }
