--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ AllCops:
   DisplayStyleGuide: true
   StyleGuideCopsOnly: false
 Style/BlockDelimiters:
-  EnforcedStyle: semantic
+  EnforcedStyle: line_count_based
 Style/CollectionMethods:
   PreferredMethods:
     collect: map
@@ -29,7 +29,7 @@ Style/FormatString:
   Enabled: true
   EnforcedStyle: format
 Style/GlobalVars:
-  Enabled: true
+  Enabled: false
 Style/GuardClause:
   Enabled: true
   MinBodyLength: 3
@@ -94,7 +94,7 @@ Style/TrailingBlankLines:
   EnforcedStyle: final_newline
 Style/TrailingComma:
   Enabled: true
-  EnforcedStyleForMultiline: comma
+  EnforcedStyleForMultiline: no_comma
 Style/TrivialAccessors:
   Enabled: true
   AllowDSLWriters: true
