--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,3 @@
-development:
-  adapter: postgresql
-  database: hummingbird_development
-  host: localhost
-
 test:
   adapter: postgresql
   database: hummingbird_test
@@ -16,3 +11,11 @@ production:
   host: <%= ENV['POSTGRES_HOST'] %>
   port: 5432
   pool: 50
+
+development:
+  adapter: postgresql
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] %>
+  port: <%= ENV['POSTGRES_PORT_5432_TCP_PORT'] %>
+  username: <%= ENV['POSTGRES_ENV_POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_ENV_POSTGRES_PASSWORD'] %>
+  database: postgres
