postgres config should work with and without docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 postgres:
-  image: postgres
+  image: postgres:9.3
   environment:
     POSTGRES_PASSWORD: mysecretpassword
     POSTGRES_USER: postgres
