--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,11 @@
+development:
+  adapter: postgresql
+  database: <%= ENV['POSTGRES_DATABASE'] ||= "hummingbird_development" %>
+  host: <%= ENV['POSTGRES_HOST'] ||= "localhost" %>
+  port: <%= ENV['POSTGRES_PORT'] ||= "5432" %>
+  username: <%= ENV['POSTGRES_USERNAME'] ||= "" %>
+  password: <%= ENV['POSTGRES_PASSWORD'] ||= "" %>
+
 test:
   adapter: postgresql
   database: hummingbird_test
@@ -11,11 +19,4 @@ production:
   host: <%= ENV['POSTGRES_HOST'] %>
   port: 5432
   pool: 50
-
-development:
-  adapter: postgresql
-  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] %>
-  port: <%= ENV['POSTGRES_PORT_5432_TCP_PORT'] %>
-  username: <%= ENV['POSTGRES_ENV_POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_ENV_POSTGRES_PASSWORD'] %>
   database: postgres
