--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,28 +1,73 @@
 source 'https://rubygems.org'
+ruby '2.2.3'
 
-
+# Core Stuff
 gem 'rails', '4.2.1'
-
 gem 'rails-api'
+gem 'puma'
 
-gem 'spring', :group => :development
-
-
+# Database Stuff
 gem 'pg'
+gem 'hiredis'
+gem 'redis', require: ['redis', 'redis/connection/hiredis']
+gem 'redis-rails'
+gem 'connection_pool'
 
+# Auth{entication,orization}
+gem 'devise', '~> 3.5'
+gem 'devise-async'
+gem 'omniauth'
+gem 'omniauth-facebook'
+gem 'pundit'
 
+# Attachments
+gem 'paperclip', '~> 4.1'
+gem 'paperclip-optimizer'
+gem 'delayed_paperclip'
+gem 'image_optim', require: false
+gem 'aws-sdk'
 
-# To use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+# Background tasks
+gem 'sidekiq', '~> 3.1'
+gem 'sidetiq'
 
-# To use Jbuilder templates for JSON
-# gem 'jbuilder'
+# Text pipeline
+gem 'onebox'
+gem 'twemoji', github: 'vevix/twemoji'
 
-# Use unicorn as the app server
-# gem 'unicorn'
+# Miscellaneous Utilities
+gem 'friendly_id' # slug-urls-are-cool
+gem 'nokogiri' # Parse MAL XML shit
+gem 'active_model_serializers', '0.10.0.rc3' # JSON-API serialization
+gem 'paranoia', '~> 2.0'
 
-# Deploy with Capistrano
-# gem 'capistrano', :group => :development
+# Optimizations and Profiling
+gem 'rack-mini-profiler'
+gem 'flamegraph'
+gem 'fast_blank' # Faster String#blank?
+gem 'oj' # Blazing-fast JSON parsing
 
-# To use debugger
-# gem 'ruby-debug19', :require => 'ruby-debug'
+group :development, :test do
+  gem 'foreman' # Start processes
+  gem 'dotenv-rails' # Load default ENV
+  gem 'pry-rails' # Better Console
+  gem 'spring' # Faster CLI
+  gem 'annotate', require: false # Schema annotations inside model-related files
+
+  # Guard notices filesystem changes and *does things*
+  gem 'guard'
+  gem 'guard-rspec', require: false # Running specs
+end
+
+group :test do
+  gem 'factory-girl-rails'
+  gem 'rspec-rails' # Specs > Tests
+  gem 'shoulda' # it { should(:have_shoulda) }
+  gem 'timecop' # stop [hammer-]time
+  gem 'mocha' # Mocks and stubs
+  gem 'fakeweb' # Web faking
+  gem 'json_expressions' # Test outputted JSON
+  gem 'factory_girl_rails' # Factories > Fixtures
+  gem 'faker' # Fake data
+  gem 'codeclimate-test-reporter', require: false
+end
