--- a/server/Gemfile
+++ b/server/Gemfile
@@ -16,6 +16,7 @@ gem 'connection_pool'
 # Auth{entication,orization}
 gem 'devise', '~> 3.5'
 gem 'devise-async'
+gem 'doorkeeper'
 gem 'omniauth'
 gem 'omniauth-facebook'
 gem 'pundit'
