server: solve rubocop complaints

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -62,7 +62,8 @@ group :development, :test do
 
   # HERE THERE BE DRAGONS: Remove and uncomment line below when rspec-rails is
   # released with a fix for rspec/rspec-rails#1430
-  %w[rspec rspec-core rspec-expectations rspec-mocks rspec-rails rspec-support].each do |lib|
+  %w[rspec rspec-core rspec-expectations rspec-mocks rspec-rails
+     rspec-support].each do |lib|
     gem lib, github: "rspec/#{lib}", branch: 'master'
   end
   # gem 'rspec-rails' # Specs > Tests
