--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,9 @@ AllCops:
   StyleGuideCopsOnly: false
 Style/BlockDelimiters:
   EnforcedStyle: line_count_based
+  # Exclude specs from the rule on block delimiters for expect {}
+  Exclude:
+    - server/spec/**/*
 Style/CollectionMethods:
   PreferredMethods:
     collect: map
