server: install loofah for html sanitization

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -32,6 +32,7 @@ gem 'sidekiq', '~> 3.4.2'
 gem 'sidetiq'
 
 # Text pipeline
+gem 'loofah-activerecord'
 gem 'onebox'
 gem 'twemoji', github: 'vevix/twemoji'
 
