--- a/server/Gemfile
+++ b/server/Gemfile
@@ -40,6 +40,7 @@ gem 'twemoji', github: 'vevix/twemoji'
 gem 'friendly_id' # slug-urls-are-cool
 gem 'nokogiri' # Parse MAL XML shit
 gem 'active_model_serializers', '0.10.0.rc3' # JSON-API serialization
+gem 'jsonapi-resources' # JSON-API resources
 gem 'paranoia', '~> 2.0'
 gem 'counter_culture'
 
