Add ELASTICSEARCH_HOST and ELASTICSEARCH_PORT variables

--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,9 @@ RAILS_ENV=development
 REDIS_HOST=localhost
 REDIS_URL=redis://localhost:6379/0
 
+ELASTICSEARCH_HOST=localhost
+ELASTICSEARCH_PORT=9200
+
 # Limited privileges, don't bother trying. ;)
 AWS_BUCKET=hummingbird-me
 AWS_ACCESS_KEY_ID=AKIAIEMWFZV65HLXMY7Q
