server: use ELASTICSEARCH_URL instead of ELASTICSEARCH_HOST/PORT

--- a/server/config/chewy.yml
+++ b/server/config/chewy.yml
@@ -1,7 +1,8 @@
 test:
-  host: 'localhost:9200'
   prefix: 'test'
 
 development:
-  host: 'localhost:9200'
   prefix: 'development'
+
+production:
+  prefix: 'production'
