--- a/server/.env
+++ b/server/.env
@@ -3,8 +3,7 @@ RAILS_ENV=development
 REDIS_HOST=localhost
 REDIS_URL=redis://localhost:6379/0
 
-ELASTICSEARCH_HOST=localhost
-ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_URL=localhost:9200
 
 # Limited privileges, don't bother trying. ;)
 AWS_BUCKET=hummingbird-me
