travis: allow rbx to fail and finish fast
Since our Rubinius support is experimental, don't worry too much about failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,11 @@ env:
     - TESTGROUP=server USE_RUBY=ruby-2.2.3
     - TESTGROUP=server USE_RUBY=rbx-3.2
 
+matrix:
+  allow_failures:
+    - env: TESTGROUP=server USE_RUBY=rbx-3.2
+  fast_finish: true
+
 before_install:
   - source bin/travis/before_install
 
