Split docker containers into separate client and server containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,40 @@
-postgres:
-  image: postgres:9.3
-  environment:
-    POSTGRES_PASSWORD: mysecretpassword
-    POSTGRES_USER: postgres
-redis:
-  image: redis
-elasticsearch:
-  image: elasticsearch
-web:
-  build: .
-  volumes:
-    - ./:/opt/hummingbird/
-  ports:
-    - 3000:3000
-    - 4200
-    - 49152:49152
-  links:
-    - postgres
-    - redis
-    - elasticsearch
-  environment:
-    RAILS_ENV: development
+version: '2'
 
+services:
+  # Database servers
+  postgres:
+    image: postgres:9.3
+    environment:
+      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_USER: postgres
+  redis:
+    image: redis
+  elasticsearch:
+    image: elasticsearch
+
+  # Web server, also acts as public entrypoint
+  nginx:
+    links: [client, server]
+    ports: [80]
+
+  # Rails server
+  server: &rails
+    links: [postgres, redis, elasticsearch]
+    build: ./server
+    volumes:
+      - ./server:/opt/hummingbird/server
+    environment:
+      RAILS_ENV: development
+
+  # Sidekiq
+  sidekiq:
+    <<: *rails
+    command: [sidekiq]
+
+  # Ember server
+  client:
+    build: ./client
+    volumes:
+      - ./client:/opt/hummingbird/client
+    environment:
+      EMBER_ENV: development
