docker: add bootstrap script, improve containerizations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   # Web server, also acts as public entrypoint
   nginx:
+    image: nginx
     links: [client, server]
     ports: [80]
 
