--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,9 @@ COPY . /opt/hummingbird/server
 
 WORKDIR /opt/hummingbird/server
 RUN bundle install
+ENV DATABASE_URL=postgresql://postgres:mysecretpassword@postgres/
+ENV REDIS_URL=redis://redis/1
 
 ENTRYPOINT ["bundle", "exec"]
-CMD ["puma", "--port 80"]
+CMD ["puma", "--port=80"]
 EXPOSE 80
