docker: install dependencies in an earlier layer

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,10 +2,17 @@ FROM rails:4.2
 MAINTAINER Hummingbird Media, Inc.
 
 RUN mkdir -p /opt/hummingbird/server
-COPY . /opt/hummingbird/server
 
+# Preinstall gems in an earlier layer so we don't reinstall every time any file
+# changes.
+COPY ./Gemfile /opt/hummingbird/server/
+COPY ./Gemfile.lock /opt/hummingbird/server/
 WORKDIR /opt/hummingbird/server
 RUN bundle install
+
+# *NOW* we copy the codebase in
+COPY . /opt/hummingbird/server
+
 ENV DATABASE_URL=postgresql://postgres:mysecretpassword@postgres/
 ENV REDIS_URL=redis://redis/1
 
