docker: move docker-compose.yml to V1
We should try and support as much of the long tail of docker versions right now while we wait for widespread adoption of Docker 1.10+ and Compose 1.6+.  Until then, we'll use V1 (and eventually switch back to V2)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,39 @@
-version: '2'
+# Database servers
+postgres:
+  image: postgres:9.3
+  environment:
+    POSTGRES_PASSWORD: mysecretpassword
+    POSTGRES_USER: postgres
+redis:
+  image: redis
+elasticsearch:
+  image: elasticsearch
 
-services:
-  # Database servers
-  postgres:
-    image: postgres:9.3
-    environment:
-      POSTGRES_PASSWORD: mysecretpassword
-      POSTGRES_USER: postgres
-  redis:
-    image: redis
-  elasticsearch:
-    image: elasticsearch
+# Web server, routing /api and / to server, client respectively
+nginx:
+  build: ./scripts
+  dockerfile: Dockerfile.nginx
+  links: [client, server]
+  ports: [80]
 
-  # Web server, routing /api and / to server, client respectively
-  nginx:
-    build:
-      context: ./scripts
-      dockerfile: Dockerfile.nginx
-    links: [client, server]
-    ports: [80]
+# Rails server
+server: &rails
+  links: [postgres, redis, elasticsearch]
+  build: ./server
+  volumes:
+    - ./server:/opt/hummingbird/server
+  environment:
+    RAILS_ENV: development
 
-  # Rails server
-  server: &rails
-    links: [postgres, redis, elasticsearch]
-    build: ./server
-    volumes:
-      - ./server:/opt/hummingbird/server
-    environment:
-      RAILS_ENV: development
+# Sidekiq
+sidekiq:
+  <<: *rails
+  command: [sidekiq]
 
-  # Sidekiq
-  sidekiq:
-    <<: *rails
-    command: [sidekiq]
-
-  # Ember server
-  client:
-    build: ./client
-    volumes:
-      - ./client:/opt/hummingbird/client
-    environment:
-      EMBER_ENV: development
+# Ember server
+client:
+  build: ./client
+  volumes:
+    - ./client:/opt/hummingbird/client
+  environment:
+    EMBER_ENV: development
