docker: stuff node_modules for client into a data volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,6 @@ client:
   build: ./client
   volumes:
     - ./client:/opt/hummingbird/client
+    - /opt/hummingbird/client/node_modules
   environment:
     EMBER_ENV: development
