--- a/scripts/configs/nginx.conf
+++ b/scripts/configs/nginx.conf
@@ -1,10 +1,30 @@
 server {
     listen 80;
 
-    location /api/ {
-        proxy_pass http://server/;
+    # Proxy settings
+    resolver 127.0.0.11;
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real_IP $remote_addr;
+    proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
+
+    # This nonsense is to force runtime (instead of boot-time) resolution of DNS
+    # so that Docker containers can be swapped, while being functionally
+    # equivalent to the following block:
+    #
+    #     location /api/ {
+    #         proxy_pass http://server/;
+    #     }
+    #
+    # It rewrites the path, stripping the prefix of the location block, so that
+    # Rails doesn't have to be completely aware that it's nested under /api/.
+    location ~* /api/(?<path>.*$) {
+        set $upstream "http://server/";
+        proxy_pass $upstream$path;
     }
-    location / {
-        proxy_pass http://client/;
+    location ~* /(?<path>.*$) {
+        set $upstream "http://client/";
+        proxy_pass $upstream$path;
     }
 }
+
