--- a/server/config/chewy.yml
+++ b/server/config/chewy.yml
@@ -1,8 +1,14 @@
-test:
-  prefix: 'test'
+default: &default
+  host: <%= ENV['ELASTICSEARCH_HOST'] %>
 
 development:
+  <<: *default
   prefix: 'development'
 
+test:
+  <<: *default
+  prefix: 'test'
+
 production:
+  <<: *default
   prefix: 'production'
