--- a/scripts/configs/nginx.conf
+++ b/scripts/configs/nginx.conf
@@ -20,11 +20,11 @@ server {
     # Rails doesn't have to be completely aware that it's nested under /api/.
     location ~* /api/(?<path>.*$) {
         set $upstream "http://server/";
-        proxy_pass $upstream$path;
+        proxy_pass $upstream$path$is_args$args;
     }
     location ~* /(?<path>.*$) {
         set $upstream "http://client/";
-        proxy_pass $upstream$path;
+        proxy_pass $upstream$path$is_args$args;
     }
 }
 
