server: lock jsonapi-resources to 0.7.0 and update bundle

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -41,7 +41,7 @@ gem 'twemoji', github: 'vevix/twemoji'
 gem 'friendly_id' # slug-urls-are-cool
 gem 'nokogiri' # Parse MAL XML shit
 gem 'typhoeus' # Parallelize scraping tasks
-gem 'jsonapi-resources' # JSON-API resources
+gem 'jsonapi-resources', '~> 0.7.0' # JSON-API resources
 gem 'acts_as_list' # Sortables!
 gem 'paranoia', '~> 2.0' # Faux deletion
 gem 'counter_culture' # Fancier counter caches
