server: switch from custom authorization solution to jsonapi-authorization

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -19,6 +19,7 @@ gem 'devise', '~> 3.5'
 gem 'devise-async'
 gem 'doorkeeper'
 gem 'pundit'
+gem 'jsonapi-authorization'
 gem 'rolify'
 
 # Attachments
