client/server: Implement Drama/Manga pages
Server:
  - Included SearchableController for DramaController
Client:
  - Shares code for all media routes under `routes/media`
  - Creates routes for Manga
  - Removes `box-select-option` component and moves logic to `box-select`
  - Renamed `media-poster-summary` component to `media-poster`
  - Moves `ui-slider`, `media-poster`, & `box-select` components to `routes/media`

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,11 @@ client/bower_components
 client/public/system/*
 client/.coverage
 
+# docker
+
+docker-sync.yml
+docker-compose-dev.yml
+
 # general
 
 tmp/
