--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.9
-MAINTAINER Coachnite
+MAINTAINER Hummingbird
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx.conf /etc/nginx/conf.d/coachnite.conf
+COPY ./nginx.conf /etc/nginx/conf.d/hummingbird.conf
