--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # server
-server/*
+server
 
 # client
-client/*
+client
 
 # docker
 docker-sync.yml
