--- a/server/Gemfile
+++ b/server/Gemfile
@@ -19,7 +19,7 @@ gem 'devise', '~> 3.5'
 gem 'devise-async'
 gem 'doorkeeper'
 gem 'pundit'
-gem 'jsonapi-authorization'
+gem 'jsonapi-authorization', '~> 0.8.0'
 gem 'rolify'
 
 # Attachments
@@ -43,7 +43,7 @@ gem 'twemoji', github: 'vevix/twemoji'
 gem 'friendly_id' # slug-urls-are-cool
 gem 'nokogiri' # Parse MAL XML shit
 gem 'typhoeus' # Parallelize scraping tasks
-gem 'jsonapi-resources', '~> 0.7.0' # JSON-API resources
+gem 'jsonapi-resources', '~> 0.8.0' # JSON-API resources
 gem 'acts_as_list' # Sortables!
 gem 'paranoia', '~> 2.0' # Faux deletion
 gem 'counter_culture' # Fancier counter caches
