--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -8,6 +8,10 @@ server {
     proxy_set_header X-Real_IP $remote_addr;
     proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
 
+    # File serving
+    sendfile on;
+    include /etc/nginx/mime.types;
+
     # This nonsense is to force runtime (instead of boot-time) resolution of DNS
     # so that Docker containers can be swapped, while being functionally
     # equivalent to the following block:
@@ -25,6 +29,9 @@ server {
     location ~* /(?<path>.*$) {
         set $upstream "http://client/";
         proxy_pass $upstream$path$is_args$args;
+    }
+    location ^~ /system/ {
+        root /srv/www/uploads;
     }
 }
 
