--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.9
-MAINTAINER Hummingbird
+MAINTAINER Kitsu, Inc.
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx.conf /etc/nginx/conf.d/hummingbird.conf
+COPY ./nginx.conf /etc/nginx/conf.d/kitsu.conf
