--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -4,9 +4,10 @@ server {
     # Proxy settings
     resolver 127.0.0.11;
     proxy_redirect off;
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
     proxy_set_header X-Real_IP $remote_addr;
     proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 
     # File serving
     sendfile on;
