Stay on ES 2.4 until we can support 5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
   redis:
     image: redis
   elasticsearch:
-    image: elasticsearch
+    image: elasticsearch:2
 
   # Web server, routing /api and / to server, client respectively
   router:
