don't create schema on bin/setup and drop tables before seeding

--- a/bin/build
+++ b/bin/build
@@ -1,5 +1,7 @@
 #!/bin/bash
 
 docker-compose build
-docker-compose run --rm server rake db:setup
+# Only create the database on development.
+# Schema and seed are bone by bin/seed
+docker-compose run --rm server rake db:create
 docker-compose run --rm server rake db:setup RAILS_ENV=test
