Update router client_max_body_size to match production

--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -26,6 +26,7 @@ server {
     location ~* /api/(?<path>.*$) {
         set $upstream "http://server/";
         proxy_pass $upstream$path$is_args$args;
+        client_max_body_size 10M;
     }
     location ~* /(?<path>.*$) {
         set $upstream "http://client/";
@@ -35,4 +36,3 @@ server {
         root /srv/www/uploads;
     }
 }
-
