Update nginx.conf to match new routing scheme

--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -24,6 +24,10 @@ server {
     # It rewrites the path, stripping the prefix of the location block, so that
     # Rails doesn't have to be completely aware that it's nested under /api/.
     location ~* /api/(?<path>.*$) {
+        set $upstream "http://server/api/";
+        proxy_pass $upstream$path$is_args$args;
+    }
+    location ~* /api/system/(?<path>.*$) {
         set $upstream "http://server/";
         proxy_pass $upstream$path$is_args$args;
         client_max_body_size 10M;
