Aim /rails/ directory at server so mailer previews work

--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -32,6 +32,10 @@ server {
         proxy_pass $upstream$path$is_args$args;
         client_max_body_size 10M;
     }
+    location ~* /rails/(?<path>.*$) {
+        set $upstream "http://server/rails/";
+        proxy_pass $upstream$path$is_args$args;
+    }
     location ~* /(?<path>.*$) {
         set $upstream "http://client/";
         proxy_pass $upstream$path$is_args$args;
