Use uploads from media.kitsu.io by default

--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -41,6 +41,12 @@ server {
         proxy_pass $upstream$path$is_args$args;
     }
     location ^~ /system/ {
-        root /srv/www/uploads;
+        root /srv/www/uploads/;
+        try_files $uri @media;
+    }
+    location @media {
+        rewrite ^/system(/.*)$ $1 break;
+        proxy_set_header Host 'media.kitsu.io';
+        proxy_pass https://media.kitsu.io;
     }
 }
