Add more logging to nginx config

--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -1,6 +1,11 @@
 server {
     listen 80;
 
+    # Extreme Logging
+    error_log stderr debug;
+    rewrite_log on;
+    log_subrequest on;
+
     # Proxy settings
     resolver 127.0.0.11;
     proxy_redirect off;
