Add Forest Admin routing

--- a/router/nginx.conf
+++ b/router/nginx.conf
@@ -41,6 +41,10 @@ server {
         set $upstream "http://server/rails/";
         proxy_pass $upstream$path$is_args$args;
     }
+    location ~* /forest(?<path>.*$) {
+        set $upstream "http://server/api/forest/";
+        proxy_pass $upstream$path$is_args$args;
+    }
     location ~* /(?<path>.*$) {
         set $upstream "http://client/";
         proxy_pass $upstream$path$is_args$args;
